MediaTemplate.buildMediaTemplate